	check_ups now sends a LOGOUT string (debian bug #387001)
	Extra-opts (C plugins) now allows both '#' and ';' for comments (like N::P)
	Extra-opts (C plugins) does not allow trailing comments anymore (like N::P)
	Fixed dependency issue on libtap when ./configure --enable-libtap used. Warning: will install libtap
	Fixed segfault in extra-opts under some circumstance when reading multiple sections
	Fix long options parsing in check_disk, check_dns, check_mrtg, check_mrtgtraf and check_tcp.
	check_icmp now reports min and max round trip time perfdata (Steve Rader)
	Fixed bug where additional headers with redirection caused a segfault (Dieter Van de Walle - 2089159)

1.4.13 25th Sept 2008
	Fix Debian bug #460097: check_http --max-age broken (Hilko Bengen)
	Optimised pst3 for systems with large number of processes (Duncan Ferguson)
	Updated Nagios::Plugin to 0.27
	Fix Debian bug #479013: check_dig's -l is mandatory now (sf.net #1986306)
	check_dig now returns CRITICAL instead of WARNING when no answer section is found
	check_procs now captures stderr in external command and adds to plugin output
	check_snmp now only prints perfdata for non numeric values (#1867716)
	check_icmp now supports packet size modification
	check_http -e now accepts a comma-delimited list of expected status codes (Sven Nierlein)
	libtap now included with this distribution for easier testing. Run ./configure with --enable-libtap
	check_ntp_peer/check_ntp_time used to show port in --help but ignored the argument - now implemented
	Fix possible segfault in check_ntp_peer with deliberately invalid packets

1.4.12 27th May 2008
	Added ./check_nt -v INSTANCES to count number of instances (Alessandro Ren)
	New check_icmp -s option to specify the source IP address
	check_dns now sorts addresses for testing results for more than one returned IP (Matthias Urlichs)
	Fix segfault in check_ntp_time and (deprecated) check_ntp (Bug #1862300)